library/fdk-aac-rs/fdk-aac-sys/src/bindings.rs

extern "C" {
    #[doc = " \\brief  Acquire info about present encoder instance."]
    #[doc = ""]
    #[doc = " This function retrieves information of the encoder configuration. In addition"]
    #[doc = " to informative internal states, a configuration data block of the current"]
    #[doc = " encoder settings will be returned. The format is either Audio Specific Config"]
    #[doc = " in case of Raw Packets transport format or StreamMuxConfig in case of"]
    #[doc = " LOAS/LATM transport format. The configuration data block is binary coded as"]
    #[doc = " specified in ISO/IEC 14496-3 (MPEG-4 audio), to be used directly for MPEG-4"]
    #[doc = " File Format or RFC3016 or RFC3640 applications."]
    #[doc = ""]
    #[doc = " \\param hAacEncoder           A valid AAC encoder handle."]
    #[doc = " \\param pInfo                 Pointer to AACENC_InfoStruct. Filled on return."]
    #[doc = ""]
    #[doc = " \\return"]
    #[doc = "          - AACENC_OK, on succes."]
    #[doc = "          - AACENC_INIT_ERROR, on failure."]
    pub fn aacEncInfo(
        hAacEncoder: HANDLE_AACENCODER,
        pInfo: *mut AACENC_InfoStruct,
    ) -> AACENC_ERROR;
}
extern "C" {
    #[doc = " \\brief  Set one single AAC encoder parameter."]
    #[doc = ""]
    #[doc = " This function allows configuration of all encoder parameters specified in"]
    #[doc = " ::AACENC_PARAM. Each parameter must be set with a separate function call. An"]
    #[doc = " internal validation of the configuration value range will be done and an"]
    #[doc = " internal reconfiguration will be signaled. The actual configuration adoption"]
    #[doc = " is part of the subsequent aacEncEncode() call."]
    #[doc = ""]
    #[doc = " \\param hAacEncoder           A valid AAC encoder handle."]
    #[doc = " \\param param                 Parameter to be set. See ::AACENC_PARAM."]
    #[doc = " \\param value                 Parameter value. See parameter description in"]
    #[doc = " ::AACENC_PARAM."]
    #[doc = ""]
    #[doc = " \\return"]
    #[doc = "          - AACENC_OK, on success."]
    #[doc = "          - AACENC_INVALID_HANDLE, AACENC_UNSUPPORTED_PARAMETER,"]
    #[doc = " AACENC_INVALID_CONFIG, on failure."]
    pub fn aacEncoder_SetParam(
        hAacEncoder: HANDLE_AACENCODER,
        param: AACENC_PARAM,
        value: UINT,
    ) -> AACENC_ERROR;
}
extern "C" {
    #[doc = " \\brief  Get one single AAC encoder parameter."]
    #[doc = ""]
    #[doc = " This function is the complement to aacEncoder_SetParam(). After encoder"]
    #[doc = " reinitialization with user defined settings, the internal status can be"]
    #[doc = " obtained of each parameter, specified with ::AACENC_PARAM."]
    #[doc = ""]
    #[doc = " \\param hAacEncoder           A valid AAC encoder handle."]
    #[doc = " \\param param                 Parameter to be returned. See ::AACENC_PARAM."]
    #[doc = ""]
    #[doc = " \\return  Internal configuration value of specifed parameter ::AACENC_PARAM."]
    pub fn aacEncoder_GetParam(hAacEncoder: HANDLE_AACENCODER, param: AACENC_PARAM) -> UINT;
}
extern "C" {
    #[doc = " \\brief  Get information about encoder library build."]
    #[doc = ""]
    #[doc = " Fill a given LIB_INFO structure with library version information."]
    #[doc = ""]
    #[doc = " \\param info  Pointer to an allocated LIB_INFO struct."]
    #[doc = ""]
    #[doc = " \\return"]
    #[doc = "          - AACENC_OK, on success."]
    #[doc = "          - AACENC_INVALID_HANDLE, AACENC_INIT_ERROR, on failure."]
    pub fn aacEncGetLibInfo(info: *mut LIB_INFO) -> AACENC_ERROR;
}
